--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <p>
                 We present to you the ease of ordering food while you're with us
                 without you explicitly needing to call upon a waiter. This is a
-                work in progress. ...
+                work in progress. ...ddd
               </p>
               <button>ORDER NOW</button>
             </div>
